Align footer to centre, fix to viewport and add white background

--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -57,6 +57,11 @@ footer {
   position: fixed;
   bottom: 0;
   text-align: center;
+  background: white; 
+  display: block;
+  width: 100%;
+  
+  
   
 }
 /* ====== Articles Grid Layout ====
